Add name & identifier query parameters
