# app/controllers/archetypes_controller.rb
@@ -2,6 +2,8 @@ class ArchetypesController < ApplicationController
 
   def index
     @archetypes = archetypes
+    @archetypes = apply_query_params(archetypes: @archetypes) if query_params.present?
+
     render json: @archetypes
   end
 
@@ -14,6 +16,17 @@ class ArchetypesController < ApplicationController
 
   def archetypes
     Archetype.where(game:)
+  end
+
+  def query_params
+    params.permit(:identifier, :name, :generation)
+  end
+
+  def apply_query_params(archetypes:)
+    query_params.to_h.each do |attribute, value|
+      archetypes = archetypes.and(archetypes.contains(attribute, value))
+    end
+    archetypes
   end
 
 end
